--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = leonardo
 framework = arduino
+lib_deps = 
+	fmalpartida/LiquidCrystal@^1.5.0
+	olikraus/U8g2@^2.35.17
