Organize repository to build/test with PIO

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,7 @@ lib_deps =
 	fmalpartida/LiquidCrystal@^1.5.0
 	olikraus/U8g2@^2.35.17
 	pololu/FastGPIO@^2.2.0
+
+[env:native]
+platform = native
+build_flags = -std=c++11
